--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.4",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
